deployment/dev-k8s/deployment-events-player.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-player
  namespace: mozart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: events-player
      version: v1
  template:
    metadata:
      labels:
        app: events-player
        version: v1
    spec:
      containers:
      - name: events-player
        image: ccie-gitlab.ccie.cisco.com:4567/mozart/infrastructure/eventing/cloudevent-player:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
