deployment/dev-k8s/deployment-lds-events.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lds-events
  namespace: mozart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lds-events
      version: v1
  template:
    metadata:
      labels:
        app: lds-events
        version: v1
    spec:
      containers:
      - name: lds-events
        image: ccie-gitlab.ccie.cisco.com:4567/mozart/infrastructure/eventing/cloudevent-player:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
