deployment/dev-k8s/svc.sub1.yml
apiVersion: v1
kind: Service
metadata:
  name: sub1-events-player
  namespace: mozart
spec:
  ports:
    - port: 8888
      targetPort: 80
      protocol: TCP
      name: web
  selector:
    app: sub1-events-player
