deployment/dev-k8s/istio-vsvc.events-player.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: events-player
  namespace: mozart
spec:
  gateways:
  - istio-system/all-ccie-gateway
  hosts:
  - events-player.k.ccie.cisco.com
  http:
  - route:
    - destination:
        host: events-player
        port:
          number: 8888
