deployment/dev-k8s/istio-vsvc.sub1.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: sub1-events-player
  namespace: mozart
spec:
  gateways:
  - istio-system/all-ccie-gateway
  hosts:
  - sub1.k.ccie.cisco.com
  http:
  - route:
    - destination:
        host: sub1-events-player
        port:
          number: 8888
